# PointCloudRenderer

./: .gitignore  CMakeLists.txt  CMakeUtils.cmake  README.md
data/: cube.xyz  sphere_spiral_700.xyz
libs/: install.ps1
scripts/: install.ps1
src/: PointCloudRenderer.sln  PointCloudRendererConfig.h.in  Window.cpp  Window.h  main.cpp
src/PointCloudRenderer.APP/: App.xaml  App.xaml.cs  AssemblyInfo.cs  PointCloudRenderer.APP.csproj
src/PointCloudRenderer.APP/Components/: LoadingSpinner.xaml  LoadingSpinner.xaml.cs
src/PointCloudRenderer.APP/Converters/: BoolToVisibilityConverter.cs  EnumTypeToArrayConverter.cs  NumberToBoolConverter.cs  NumberToCustomFormatConverter.cs  RadianAngleToDomainConverter.cs  StringToReducedStringConverter.cs
src/PointCloudRenderer.APP/Extensions/: MouseBehavior.cs  ShaderTypeExtensions.cs  SliderExtensions.cs
src/PointCloudRenderer.APP/Helpers/: NamedObject.cs  NamedType.cs  QuaternionUtils.cs  Shader.cs
src/PointCloudRenderer.APP/Helpers/Models/: AxisCirclesModel.cs  AxisLinesModel.cs  CircleModel.cs  IModel.cs  LineModel.cs  SimplePointCloudModel.cs
src/PointCloudRenderer.APP/Properties/: launchSettings.json
src/PointCloudRenderer.APP/Resources/: Converters.xaml  SceneControlViews.xaml
src/PointCloudRenderer.APP/Resources/Shaders/: Circle.vert  SimplePointCloud.frag  SimplePointCloud.geom  SimplePointCloud.vert
src/PointCloudRenderer.APP/Scenes/: BaseScene.cs  SimplePointCloudScene.cs
src/PointCloudRenderer.APP/Services/: LoadPointCloudService.cs  OpenedRecentlyService.cs
src/PointCloudRenderer.APP/ViewModels/: BaseSceneViewModel.cs  BaseViewModel.cs  LoadPointCloudWindowViewModel.cs  MainWindowViewModel.cs  SimplePointCloudSceneViewModel.cs
src/PointCloudRenderer.APP/Views/: CameraControlsView.xaml  CameraControlsView.xaml.cs  LoadPointCloudWindow.xaml  LoadPointCloudWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SimplePointCloudControlView.xaml  SimplePointCloudControlView.xaml.cs
src/PointCloudRenderer.App/: App.xaml  App.xaml.cs  AppWindow.cs  PointCloudRenderer.App.csproj  Program.cs
src/PointCloudRenderer.App/Helpers/: Shader.cs
src/PointCloudRenderer.App/Helpers/Models/: AxisLinesModel.cs  CircleModel.cs  LineModel.cs  SimplePointCloudModel.cs
src/PointCloudRenderer.App/Resources/Shaders/: BasicPointCloud.frag  BasicPointCloud.vert  Circle.frag  Circle.vert  Line.frag  Line.vert  SimplePointCloud.geom  SimplePointCloud.vert
src/PointCloudRenderer.App/Scenes/: BasicPointCloudScene.cs  SimplePointCloudScene.cs
src/PointCloudRenderer.App/ViewModels/: BaseViewModel.cs  MainWindowViewModel.cs
src/PointCloudRenderer.App/Views/: LoadPointCloudWindow.xaml  LoadPointCloudWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
src/PointCloudRenderer.Data/: LineFormatOptions.cs  PointCloud.cs
src/PointCloudRenderer.Data/Converters/: IScalarConverter.cs  IntNormScalar.cs  IntScalar.cs
src/PointCloudRenderer.Data/Enums/: Separator.cs
src/PointCloudRenderer.Data/Extensions/: ListExtensions.cs  SeparatorExtensions.cs
src/PointCloudRenderer.PointCloud/: BuilderOptions.cs  IValueConverter.cs  LineData.cs  LineParser.cs  LineParserBuilder.cs  PointCloud.cs  PointCloudReader.cs  PointCloudRenderer.Data.csproj
src/PointCloudRenderer.PointCloud/Converters/: FloatScalar.cs  IValueConverter.cs
src/PointCloudRenderer.PointCloud/Enums/: CoordinatesOrder.cs  ScalarName.cs  Separator.cs
src/PointCloudRenderer.PointCloud/Parser/: LineParser.cs  LineParserBuilder.cs
src/services/: ArgumentParser.cpp  ArgumentParser.h
